[tool.poetry]
name = "mailscreener"
version = "0.1.0"
description = ""
authors = ["Benoit Deveaux <contact.flapili@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.26.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
croniter = "^1.3.7"
discord-webhook = "^0.17.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
